[package]
name = "skirt"
description = "sync but sinplocks"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/abbieirl/skirt"
keywords = ["sync"]
categories = ["no-std"]

[features]
std = ["portable-atomic/std"]
nightly = []
portable = ["dep:portable-atomic"]

[dependencies]
portable-atomic = { version = "1.10.0", optional = true }

[lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "deny"
